--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <meta name="google-adsense-account" content="ca-pub-5435534402980565">
     <title>AnimeCat</title>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5435534402980565"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     AnimeCat coming soon..
