--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
   </head>
   <body>
     AnimeCat coming soon..
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5435534402980565"
+     crossorigin="anonymous"></script>
+<!-- qiwt -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5435534402980565"
+     data-ad-slot="3308253875"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </body>
 </html>
