--- a/index.html
+++ b/index.html
@@ -1,13 +1,67 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5435534402980565">
-    <title>AnimeCat</title>
+    <title id="title">AnimeCat</title>
+    <link rel="stylesheet" href="css/a.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5435534402980565"
      crossorigin="anonymous"></script>
-  </head>
-  <body>
-    AnimeCat coming soon..
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5435534402980565"
+</head>
+<body>
+  <div id="loadingBar"></div>
+    <header class="header">
+        <div id="logo" class="logo">AnimeCat</div>
+        <div class="menu-icon" onclick="toggleMenu()">☰</div>
+        <div class="sidebar" id="sidebar">
+          <a href="#home">Home</a>
+          <a href="#news">Anime Library</a>
+          <a href="#news">Anime movies</a>
+          <a href="#Release_Schedule">Season anime</a>
+          <a href="#contact">Episode dates</a>
+          <a href="#about_us">About us</a>
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#news">Anime Library</a></li>
+                <li><a href="#gallery">Anime Movies</a></li>
+                <li><a href="#contact">Season Anime</a></li>
+                <li><a href="#policy">Episode dates</a></li>
+                <li><a href="#about_us">About us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home" class="hero">
+            <h1 id="home_welcome"></h1>
+            <p id="home_p"></p>
+        </section>
+
+        <section id="news_anime_library" class="section">
+            <h2 id="anime_library">Anime library</h2>
+            <p></p>
+        </section>
+
+        <section id="gallery" class="section">
+            <h2>Anime movies</h2>
+            <p></p>
+        </section>
+
+        <section id="news_season_anime" class="section">
+            <h2>Season Anime</h2>
+            <p></p>
+        </section>
+
+        <section id="episode_date" class="section">
+            <h2>epsoide date</h2>
+            <p></p>
+        </section>
+
+    </main>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5435534402980565"
      crossorigin="anonymous"></script>
 <!-- qiwt -->
 <ins class="adsbygoogle"
@@ -19,5 +73,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-  </body>
+    <footer class="footer">
+      <button id="backToTop" onclick="scrollToTop()">↑ Back to Top</button>
+        <p>&copy; 2025 Anime Cat. All rights reserved.</p><div id="about_us"></div>
+        <p><a href="html/PrivacyPolicy.html">Privacy Policy</a></p>
+    </footer>
+  <script src="js/a.js"></script>
+  <script src="js/b.js"></script>
+  <script src="js/c.js"></script>
+  <script src="js/d.js"></script>
+  <script src="js/e.js"></script>
+  <script src="js/f.js"></script>
+</body>
 </html>
