--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
         <p>© 2023 Anime Cat - جميع الحقوق محفوظة</p>
         <!-- صفحة الخصوصية في الفوتر -->
-        <a href="/privacy.html" style="color: #ff6b6b; text-decoration: none">سياسة الخصوصية</a>
+        <a href="/html/PrivacyPolicy.html" style="color: #ff6b6b; text-decoration: none">سياسة الخصوصية</a>
     </footer>
 
     <script>
@@ -284,6 +284,6 @@
             });
         });
     </script>
-    <script src="js/news.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/a.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
