--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="موقع Anime Cat لأحدث أخبار الأنمي والمانجا اليابانية، مراجعات حصرية، مقالات تحليلية، وأكثر">
     <meta name="keywords" content="أنمي, مانجا, أخبار أنمي, مراجعات أنمي">
+    <meta name="google-site-verification" content="TGnwJO19wtAlceafBXwave6nYcmRiuFASi0ObWa7AeY" />
     <title>Anime Cat - أخبار الأنمي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
